final version for now 18/1/2023

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   color: #e6fcf5;
+  letter-spacing: 1px;
 }
 body {
   font-family: sans-serif;
@@ -28,7 +29,10 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #fff;
 }
-
+::selection {
+  color: #fff;
+  background: #6665ee;
+}
 /*
 backgrond colors
   #66d9e8
@@ -85,11 +89,22 @@ backgrond colors
   margin-top: 25px;
 }
 /*/ /////////////////////////////////////////////////////////////*/
+.preloader {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  /* background: url("images/preloader.gif"); */
+
+  background: #000 url(images/preloader.gif) no-repeat center center;
+  background-size: 10%;
+}
 video {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -999;
+  z-index: -900;
 
   object-fit: cover;
   width: 100%;
@@ -107,7 +122,7 @@ video {
   position: fixed !important;
   top: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 500 !important;
 }
 .navbar-nav {
   font-size: 1.2rem;
@@ -141,15 +156,10 @@ video {
   }
 }
 
-.hello,
-.ahmad,
-.iam,
-.CE {
-  color: inherit;
-}
 .hello {
   margin-bottom: 0rem;
   font-size: 2.25rem;
+  opacity: 0;
 }
 /* .iam {
   display: inline-block;
@@ -160,9 +170,31 @@ video {
   font-size: 4.7rem;
   letter-spacing: 3px;
   margin-bottom: 1rem;
+  opacity: 0;
 }
 .CE {
+  opacity: 0;
   font-size: 1.25rem;
+}
+.contact {
+  opacity: 0;
+}
+.hello,
+.ahmad,
+.iam,
+.CE,
+.contact {
+  color: inherit;
+  animation: animated 5s forwards;
+}
+@keyframes animated {
+  100% {
+    opacity: 0.9;
+  }
+}
+.contact div a,
+.contact div a:hover {
+  color: rgba(0, 0, 0, 0);
 }
 .hero-image {
   width: 3rem;
@@ -171,14 +203,17 @@ video {
   /* filter: brightness(0.8); */
   border-radius: 50%;
 }
+
 /*                          projects                */
 .swiper {
-  max-width: 1000px;
+  max-width: 85%;
   height: 600px;
   margin-top: 2rem;
   border-radius: 10px;
 }
-
+iframe {
+  height: 400px;
+}
 .swiper-slide {
   background-position: center;
   background-size: cover;
@@ -209,7 +244,8 @@ video {
   right: 15px !important;
 }
 .projects {
-  height: 110vh;
+  height: fit-content;
+  padding-bottom: 4rem;
   background: linear-gradient(to bottom, #111, #171717);
   padding-top: 5rem;
   color: #333;
@@ -233,7 +269,6 @@ video {
 }
 .DataBase {
   position: relative;
-  cursor: pointer;
 }
 .DataBase:hover .details {
   opacity: 1;
@@ -242,27 +277,35 @@ video {
 .db-text {
   background: linear-gradient(to bottom, #000, #171717);
   margin-top: -6px;
-  padding: 2rem 4rem !important;
+  padding: 1.5rem 4rem !important;
+}
+.db-text p {
+  margin-bottom: 0.3rem;
 }
 /* //////////////////////////////////////////// */
 /* skills \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
+.temp {
+  min-height: 85vh;
+}
 .skills {
   background: linear-gradient(to bottom, #171717, #333);
   /* background-color: #222; */
-  height: 100vh;
-  padding-top: 5rem;
+  height: fit-content;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
 }
 .skillsW {
   border-left: 4px solid #6665ee;
   border-radius: 5px;
   padding-left: 10px;
 }
-::selection {
-  color: #fff;
-  background: #6665ee;
+.left {
+  margin-right: 3rem;
 }
+
 .skill-bars {
   padding: 25px 30px;
+  margin-top: 1.5rem !important;
   /* width: 600px; */
   /* background: #fff; */
   /* box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2); */
@@ -270,6 +313,7 @@ video {
 }
 #bars {
   display: none;
+  max-width: 85%;
 }
 .skill-bars .bar {
   margin: 2rem 0;
@@ -323,9 +367,10 @@ video {
 .progress-line span::before {
   position: absolute;
   content: "";
-  top: -10px;
+  top: 15px;
   right: 0;
   height: 0;
+  transform: rotateX(180deg);
   width: 0;
   border: 7px solid transparent;
   border-bottom-width: 0px;
@@ -336,7 +381,7 @@ video {
 }
 .progress-line span::after {
   position: absolute;
-  top: -28px;
+  top: 20px;
   right: 0;
   font-weight: 500;
   background: #000;
@@ -347,6 +392,7 @@ video {
   opacity: 0;
   animation: showText2 0.5s 1.5s linear forwards;
 }
+
 @keyframes showText2 {
   100% {
     opacity: 1;
@@ -390,16 +436,16 @@ video {
   width: 75%;
 }
 .bar .progress-line.photo span {
-  width: 35%;
+  width: 40%;
 }
 .bar .progress-line.prem span {
-  width: 30%;
+  width: 35%;
 }
 .progress-line.prem span::after {
-  content: "30%";
+  content: "35%";
 }
 .progress-line.photo span::after {
-  content: "35%";
+  content: "40%";
 }
 .progress-line.php span::after {
   content: "75%";
